force-app/main/default/objects/Patient_Delegate_Enrollment__c/Patient_Delegate_Enrollment__c.object-meta.xml
<CustomObject>
    <label>Patient Delegate Enrollment</label>
    <nameField>
        <displayFormat>PDE-{00000}</displayFormat>
        <label>Patient Delegate Enrollment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Patient Delegate Enrollments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>