force-app/main/default/objects/Patient_Delegate_Enrollment__c/fields/Attestation_c__c.field-meta.xml
<CustomField>
    <fullName>Attestation_c__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Attestation</label>
    <type>Checkbox</type>
</CustomField>