force-app/main/default/objects/Patient_Delegate_Enrollment__c/fields/Attestation_TimeStamp__c.field-meta.xml
<CustomField>
    <fullName>Attestation_TimeStamp__c</fullName>
    <label>Attestation TimeStamp</label>
    <length>150</length>
    <type>Text</type>
</CustomField>