force-app/main/default/objects/Patient_Delegate_Enrollment__c/fields/Attested_By__c.field-meta.xml
<CustomField>
    <fullName>Attested_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>PI / Site Staff / Participant added and attested in the frontend</inlineHelpText>
    <label>Attested By</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Patient Delegate Enrollments</relationshipLabel>
    <relationshipName>Patient_Delegate_Enrollments</relationshipName>
    <type>Lookup</type>
</CustomField>