force-app/main/default/objects/Patient_Delegate_Enrollment__c/fields/Delegate_Attestation__c.field-meta.xml
<CustomField>
    <fullName>Delegate_Attestation__c</fullName>
    <formula>Patient_Delegate__r.Attestation__c</formula>
    <label>Delegate Attestation</label>
    <type>Checkbox</type>
</CustomField>