force-app/main/default/objects/Patient_Delegate_Enrollment__c/fields/Is_Created_by_Bulk_Import__c.field-meta.xml
<CustomField>
    <fullName>Is_Created_by_Bulk_Import__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This checkbox is to say that the delegate was brought in via Bulk Import in Referral Hub</inlineHelpText>
    <label>Is Created by Bulk Import</label>
    <type>Checkbox</type>
</CustomField>