force-app/main/default/objects/Patient_Delegate_Enrollment__c/fields/isInviteToPP__c.field-meta.xml
<CustomField>
    <fullName>isInviteToPP__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This checkbox is to say if the delegate was invited to Patient Portal</inlineHelpText>
    <label>isInviteToPP</label>
    <type>Checkbox</type>
</CustomField>