force-app/main/default/objects/Patient_Delegate_Enrollment__c/fields/Patient_Delegate__c.field-meta.xml
<CustomField>
    <fullName>Patient_Delegate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Associated Patient Delegate Record of the delegate</inlineHelpText>
    <label>Patient Delegate</label>
    <referenceTo>Patient_Delegate__c</referenceTo>
    <relationshipLabel>Patient Delegate Enrollments</relationshipLabel>
    <relationshipName>Patient_Delegate_Enrollments</relationshipName>
    <type>Lookup</type>
</CustomField>