force-app/main/default/objects/Patient_Delegate_Enrollment__c/fields/PPM_ID__c.field-meta.xml
<CustomField>
    <fullName>PPM_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Study+Participant consents specific PPM ID captured at PDE level only for Caregivers</inlineHelpText>
    <label>PPM ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>