force-app/main/default/objects/Patient_Delegate_Enrollment__c/fields/Primary_Delegate__c.field-meta.xml
<CustomField>
    <fullName>Primary_Delegate__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This checkbox is to say if this delegate is a primary delegate on the study</inlineHelpText>
    <label>Primary Delegate</label>
    <type>Checkbox</type>
</CustomField>