force-app/main/default/objects/Patient_Delegate_Enrollment__c/fields/Study_Artificial_Voice_Consent__c.field-meta.xml
<CustomField>
    <fullName>Study_Artificial_Voice_Consent__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>A check on this field indicates consent is provided in the frontend by the delegate to contact them via Artificial Voice for the associated study</inlineHelpText>
    <label>Study Artificial Voice Consent</label>
    <type>Checkbox</type>
</CustomField>