force-app/main/default/objects/Patient_Delegate_Enrollment__c/fields/Study_Assisted_Dialing_Consent__c.field-meta.xml
<CustomField>
    <fullName>Study_Assisted_Dialing_Consent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Study Assisted Dialing Consent</label>
    <type>Checkbox</type>
</CustomField>