force-app/main/default/objects/Patient_Delegate_Enrollment__c/fields/Study_info_storage_consent__c.field-meta.xml
<CustomField>
    <fullName>Study_info_storage_consent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Study info storage consent</label>
    <type>Checkbox</type>
</CustomField>