force-app/main/default/objects/Patient_Delegate_Enrollment__c/fields/Study_Phone_Consent__c.field-meta.xml
<CustomField>
    <fullName>Study_Phone_Consent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Study Phone Consent</label>
    <type>Checkbox</type>
</CustomField>