force-app/main/default/objects/Patient_Delegate_Enrollment__c/fields/Study_Phone_Consent_Time__c.field-meta.xml
<CustomField>
    <fullName>Study_Phone_Consent_Time__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Date and Timestamp on when the consent was provided in the frontend by the delegate to contact them via Phone for the associated study</inlineHelpText>
    <label>Study Phone Consent Time</label>
    <type>DateTime</type>
</CustomField>