force-app/main/default/objects/Patient_Delegate_Enrollment__c/fields/Study_Pre_recorded_Voice_Consent__c.field-meta.xml
<CustomField>
    <fullName>Study_Pre_recorded_Voice_Consent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Study Pre-recorded Voice Consent</label>
    <type>Checkbox</type>
</CustomField>