force-app/main/default/objects/Patient_Delegate_Enrollment__c/fields/Study_SMS_Consent__c.field-meta.xml
<CustomField>
    <fullName>Study_SMS_Consent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Study SMS Consent</label>
    <type>Checkbox</type>
</CustomField>