force-app/main/default/objects/Patient_Delegate_Enrollment__c/fields/Study_SMS_Consent_Time__c.field-meta.xml
<CustomField>
    <fullName>Study_SMS_Consent_Time__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Study SMS Consent Time</label>
    <type>DateTime</type>
</CustomField>