force-app/main/default/objects/Patient_Delegate_Enrollment__c/fields/Study_Storage_Consent_Time__c.field-meta.xml
<CustomField>
    <fullName>Study_Storage_Consent_Time__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Study Storage Consent Time</label>
    <type>DateTime</type>
</CustomField>