force-app/main/default/objects/Patient_Delegate_Enrollment__c/fields/Welcome_Message_Delivered__c.field-meta.xml
<CustomField>
    <fullName>Welcome_Message_Delivered__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Welcome Message Delivered</label>
    <type>Checkbox</type>
</CustomField>